fixed the overflow for the iframes

--- a/src/styles/components/_Showcase.scss
+++ b/src/styles/components/_Showcase.scss
@@ -30,7 +30,7 @@
                 margin-top: 1rem;
             }
             .grid-item {
-                height: 150px;
+                min-height: 100px;
                 width: 31%;
                 .overlay {
                     .text {
@@ -141,9 +141,8 @@
                 }
             }
             .showcase-pens {
-                // border: 2px solid yellow;
                 width: 45%;
-                height: 100%;
+                height: 82vh;
                 background-color: $dark-blue-gray;
                 padding: 20px;
                 border-radius: 5px;
@@ -152,6 +151,7 @@
                 width: 47%;
                 background-color: $dark-blue-gray;
                 padding: 20px;
+                height: 140vh;
                 border-radius: 5px;
                 .frame-overlay {
                     position: relative;
@@ -193,7 +193,7 @@
                     }
                     .showcase-main {
                         width: 100%;
-                        height: 269px;
+                        min-height: 200px;
                         img {
                             width: 100%;
                             height: 100%;
@@ -230,8 +230,8 @@
                 }
                 .delete-container {
                     text-align: center;
-                    margin-top: 3rem;
-                    margin-bottom: 2rem;
+                    margin: 1rem 0;
+                    padding: 1rem 0;
                     p,
                     i {
                         color: $text-white;
